--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "lightning-probing"
 version = "0.1.0"
 edition = "2021"
+author = "Nitesh Balusu <niteshbalusu@protonmail.com>"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
