update toml file with metadata

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "lightning-probing"
 version = "0.1.0"
 edition = "2021"
 author = "Nitesh Balusu <niteshbalusu@protonmail.com>"
+description = "A library for probing the lightning network."
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
